--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Blog",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass": "sass --style=compressed src/scss/main.scss src/_includes/css/main.css",
+    "watch:eleventy": "eleventy --serve",
+    "watch:sass": "npm run sass -- --watch",
+    "start": "npm-run-all sass --parallel watch:*",
+    "build": "npm run sass && eleventy"
   },
   "repository": {
     "type": "git",
@@ -16,6 +20,10 @@
   },
   "homepage": "https://github.com/Eldarni/Blog#readme",
   "dependencies": {
-    "@11ty/eleventy": "^0.12.1"
+    "@11ty/eleventy": "^1.0.0-beta.2",
+    "glob": "^7.2.0",
+    "grey-matter": "^0.0.0",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.43.2"
   }
 }
