--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "eldarni.me",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --style=compressed src/scss/main.scss src/_includes/css/main.css",
+    "sass": "sass --style=compressed src/scss/main.scss public/css/main.css",
     "watch:eleventy": "eleventy --serve",
     "watch:sass": "npm run sass -- --watch",
     "start": "npm-run-all sass --parallel watch:*",
