--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/Eldarni/eldarni.me#readme",
   "dependencies": {
-    "@11ty/eleventy": "^1.0.0-beta.2",
+    "@11ty/eleventy": "^1.0.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
     "glob": "^7.2.0",
     "grey-matter": "^0.0.0",
