--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@11ty/eleventy": "^1.0.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
+    "eleventy-plugin-time-to-read": "^1.2.0",
     "glob": "^7.2.0",
     "grey-matter": "^0.0.0",
     "npm-run-all": "^4.1.5",
