--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   },
   "homepage": "https://github.com/Eldarni/eldarni.me#readme",
   "dependencies": {
-    "@11ty/eleventy": "^1.0.2",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
-    "eleventy-plugin-time-to-read": "^1.2.0",
-    "glob": "^7.2.0",
-    "grey-matter": "^0.0.0",
+    "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+    "eleventy-plugin-time-to-read": "^1.3.0",
+    "glob": "^10.3.10",
+    "gray-matter": "^4.0.3",
     "npm-run-all": "^4.1.5",
-    "sass": "^1.43.2"
+    "sass": "^1.70.0"
   }
 }
